# text2sqlAgent

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml  schema.yaml  schema.yaml.example
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
WrenAI-wren-v0.7.0/.claude/: CLAUDE.md
docker/: .dockerignore  Dockerfile  docker-compose.yaml
docs/: GenBI_Integration_PRD.md  Micro-GenBI-API-Spec.md  Micro-GenBI-Cache-Strategy.md  Micro-GenBI-Dev-Plan.md  Micro-GenBI-Feature-Audit-Report.md  Micro-GenBI-Feature-Enhancement.md  Micro-GenBI-Integration.md  Micro-GenBI-LLM-Cost-Tracker.md  Micro-GenBI-Prompt-Engineering.md  Micro-GenBI-Security-Enhancement.md  Micro-GenBI-System-Database.md  Micro-GenBI-UI-Design.md  Micro-GenBI-WrenAI-Port-Guide.md  Multi-Database-Architecture.md
fronted/: README.md  metadata.json  package-lock.json  package.json  vite.config.ts
fronted/src/: App.tsx  index.css  main.tsx  types.ts
fronted/src/api/: index.ts
fronted/src/components/: AdminDashboardView.tsx  AnomalyPanel.tsx  ApiKeyPanel.tsx  AssistantView.tsx  AuthView.tsx  ChartPickerPanel.tsx  DashboardView.tsx  ErrorBoundary.tsx  ExportPanel.tsx  HealthDashboard.tsx  HistoryDrawer.tsx  OperationTracePanel.tsx  QueryWorkbenchView.tsx  RegistryView.tsx  ReportView.tsx  ResultInsightPanel.tsx  SQLVersionPanel.tsx  SchemaSearchModal.tsx  SettingsView.tsx  StreamingQueryPanel.tsx  SubscriptionPanel.tsx  SuggestionDropdown.tsx  TopNavBar.tsx
fronted/src/context/: AuthContext.tsx  ToastContext.tsx
fronted/src/hooks/: useQueries.ts
scripts/: extract_schema.py  init_db.py  schema_extract.py  start.ps1  start.sh  stop.ps1
src/micro_genbi/: __init__.py  errors.py  models.py
src/micro_genbi/api/: __init__.py  config_routes.py  dependencies.py  main.py  preview.py  preview_routes.py  routes.py  schema_routes.py
src/micro_genbi/chart/: __init__.py  smart_recommender.py
src/micro_genbi/cli/: __init__.py  main.py
src/micro_genbi/config/: __init__.py  hot_reload.py
src/micro_genbi/connectors/: __init__.py  base.py  bigdata_router.py  clickhouse_connector.py  fdw_connector.py
src/micro_genbi/database/: __init__.py  cross_db_models.py  cross_db_services.py  models.py  services.py
src/micro_genbi/db/: __init__.py  config.py  connection_factory.py  engine.py  execution.py  health_check.py  router.py  schema_extractor.py
src/micro_genbi/intent/: __init__.py  classifier.py  query_suggester.py
src/micro_genbi/llm/: __init__.py  base.py  cost_tracker.py  prompts.py
src/micro_genbi/mcp/: __init__.py  server.py
src/micro_genbi/memory/: __init__.py  lancedb_store.py  memory_api.py  memory_tools.py
src/micro_genbi/monitoring/: __init__.py  cache.py  logging.py  metrics.py
src/micro_genbi/pipeline/: __init__.py  self_correction.py
src/micro_genbi/prediction/: __init__.py  prediction_service.py  prophet_predictor.py  statistics_predictor.py
tests/: conftest.py
tests/integration/: test_e2e_pipeline.py  test_pipeline.py
tests/unit/: test_anomaly_detector.py  test_chart_engine.py  test_data_exporter.py  test_intent_classifier.py  test_llm_analysis.py  test_operation_trace.py  test_prompt_injection.py  test_query_suggester.py  test_safety_validator.py  test_self_correction.py  test_semantic_registry.py  test_sql_versioning.py  test_tfidf_index.py
(+27 files in other folders)
